# canonical

./: .env.example  .gitignore  QWEN_7B_UPGRADE.md  README.md  changelog.md  contributing.md  data  deployment.md  docker-compose.yml  dockerfile  env.example  kibana_rule_1.kql  kibana_rule_2.kql  kibana_rule_3.kql  license  pyproject.toml  qrce_001_external_smb_scanning.kql  requirements.txt  rule1.kql  rule2.kql  rule3.kql  rule4.esql  run_azure_ingestion.py  security.md  setup.py  simple_test.yaml  system-requirements.md  test_foundation_sec.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml
data-volume/converters/: kibanaql_to_kustoql_converter.py
data-volume/outputs/: converted_azure_rules.yaml
docs/: model-tuning-improvements.md
examples/: qradar_to_kustoql_example.py  sample_sigma_rule.yml
frontend/: .gitignore  FEATURES.md  README.md  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: LoadingIndicator.tsx  PlaygroundTab.tsx
scripts/: connect_update_dier_inginx.sh  ingest_azure_sentinel_api.py  ingest_azure_sentinel_docs.py
src/canonical/: __init__.py  _version.py  cli.py
src/canonical.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/canonical/api/: main.py
src/canonical/core/: config.py  converter.py  models.py
src/canonical/data_ingestion/: all_ingestion.py  atomic_ingestion.py  azure_docs_ingestion.py  azure_sentinel_ingestion.py  car_ingestion.py  mitre_ingestion.py  qradar_docs_ingestion.py  qradar_ingestion.py  sigma_ingestion.py
src/canonical/parsers/: kibanaql.py  qradar.py  qradar_parser.py  sigma.py
src/canonical/services/: chromadb.py  custom_tables.py  embedding.py  enhanced_llm.py  hybrid_retrieval.py  llm.py
src/canonical/workflows/: conversion.py  qradar_to_kustoql.py
tests/: check_chromadb_basic.py  debug_azure_collection.py  enhanced_rag_converter.py
